2012-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (AUTOMAKE_OPTIONS): Update to Automake 1.12.3.
	Update test suite to use Automake TAP driver rather than legacy
	tests.

2012-08-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jnx.c (ExtractTileJPG): Add a trace of tile offset and size.

2012-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jnx.c (ExtractTileJPG): Use a memory buffer for the JPEG
	tile rather than a temporary file.

2012-08-12  Fojtik Jaroslav  <JaFojtik@seznam.cz>

        * PerlMagick/t/input_jnx.jnx: Small JNX test file.

2012-08-11  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c: speedup.
          gm benchmark convert Demo.jnx Demo.gif
        before: Results: 1 threads 1 iter 20.36s user 20.66s total 0.048 iter/s 0.049 iter/cpu
        after:  Results: 1 threads 1 iter 10.36s user 10.55s total 0.095 iter/s 0.097 iter/cpu

2012-08-10  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c: changed malloc/free to MagickMalloc/MagickFree.

2012-08-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jnx.c (ReadJNXImage): Add progress monitor support for
	JNX.

2012-08-06  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c: Image cache is turned off to work-around memory
	overflow.

2012-08-05  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c: Fixed.

2012-08-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jnx.c: Add JNX coder for "Garmin proprietary Image
	Format" (implementation by Jaroslav Fojtik) to the build.  Code is
	not yet working properly at this time.

2012-08-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Remove use of -Wl,-zlazyload under Solaris since
	it seems to decrease the stability of C++ exceptions in x86-64
	build and does not measurably improve runtimes.  Don't force use
	of liblzma because libtiff is used.  User should always have
	control.

2012-07-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
