@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020120818"
-#define public MagickPackageReleaseDate "snapshot-20120818"
+#define public MagickPackageVersionAddendum ".020120819"
+#define public MagickPackageReleaseDate "snapshot-20120819"
