@@ -1,4 +1,5 @@
 #!/bin/sh
+# -*- shell-script -*-
 # Copyright (C) 2004-2012 GraphicsMagick Group
 # Test raw image encode/decode in memory.
 . ${srcdir}/tests/common.shi
